@@ -33,6 +33,7 @@ export(read_sge_accounting)
 export(round_ram)
 export(save_file_index)
 export(sge_accounting_file)
+export(sge_find_weeks)
 export(system_info)
 export(users_over_time)
 export(write_raw_sge_accounting)
