@@ -2,7 +2,9 @@ Package: wyntonquery
 
 Version: 0.1.0-9000 [2021-06-18]
 
- * ...
+NEW FEATURES:
+
+ * Add sge_find_weeks().
  
 
 Version: 0.1.0 [2021-06-18]
